Further developed websocket capability and fixed some issues

--- a/examples/trading.ipynb
+++ b/examples/trading.ipynb
@@ -13,15 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "703f85d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "f7856b05",
    "metadata": {},
    "outputs": [],
@@ -40,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "709a932e",
    "metadata": {},
    "outputs": [],
@@ -59,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ddf46441",
    "metadata": {},
    "outputs": [
@@ -67,13 +59,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Midprice for symbol: BTCUSDT is 119007.5\n",
-      "Best bid for BTCUSDT: [119013.5, 3.857]\n",
-      "Best ask for BTCUSDT: [119019.2, 0.402]\n",
-      "Best bid for BTCUSDT: [119019.1, 17.744]\n",
-      "Best ask for BTCUSDT: [119019.2, 3.319]\n",
-      "Trades for BTCUSDT at time 1752682959506: 119019.1 0.001 -1\n",
-      "Latency for BTCUSDT: 5\n"
+      "Midprice for symbol: BTCUSDT is 119460.1\n",
+      "Best bid for BTCUSDT: [119457.0, 0.005]\n",
+      "Best ask for BTCUSDT: [119457.1, 32.038]\n",
+      "Best bid for BTCUSDT: [119457.0, 1.964]\n",
+      "Best ask for BTCUSDT: [119457.1, 27.61]\n",
+      "Trades for BTCUSDT at time 1753213104463: 119450.0 0.003 -1\n",
+      "Latency for BTCUSDT: 2\n"
      ]
     }
    ],
@@ -100,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "55d003c9",
    "metadata": {},
    "outputs": [
@@ -108,11 +100,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wallet balance: 413.0750669\n",
+      "Wallet balance: 345.59846769\n",
       "Fees for BTCUSDT: [0.00055, 0.0002]\n",
-      "Positions for BTCUSDT: {'size': 0.025, 'aep': 117324.88888889, 'mark_price': 119179.09, 'value': 2933.12222223, 'leverage': 5.0, 'position_balance': 0.0, 'unrealized_pnl': 46.35502777, 'realized_pnl': -13.17114151}\n",
-      "Positions for XRPUSDT: {'size': 600.0, 'aep': 2.941325, 'mark_price': 2.9917, 'value': 1764.795, 'leverage': 10.0, 'position_balance': 0.0, 'unrealized_pnl': 30.225, 'realized_pnl': 15.15576998}\n",
-      "Positions for ETHUSDT: {'size': 0, 'aep': 0, 'mark_price': 3249.52, 'value': 0, 'leverage': 10.0, 'position_balance': 0, 'unrealized_pnl': 0, 'realized_pnl': 0.0}\n"
+      "Positions for BTCUSDT: {'size': 0.02, 'aep': 117131.84883133, 'mark_price': 119450.0, 'value': 2342.63697664, 'leverage': 10.0, 'position_balance': 0.0, 'unrealized_pnl': 46.36302336, 'realized_pnl': 28.81278645}\n",
+      "Positions for XRPUSDT: {'size': 500.0, 'aep': 3.35973265, 'mark_price': 3.5586, 'value': 1679.86632536, 'leverage': 10.0, 'position_balance': 0.0, 'unrealized_pnl': 99.43367464, 'realized_pnl': 236.56787388}\n",
+      "Positions for ETHUSDT: {'size': 0.5, 'aep': 3626.29827162, 'mark_price': 3693.9, 'value': 1813.14913581, 'leverage': 10.0, 'position_balance': 0.0, 'unrealized_pnl': 33.80086419, 'realized_pnl': 157.96821851}\n"
      ]
     }
    ],
@@ -134,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "ce864918",
    "metadata": {},
    "outputs": [
@@ -142,7 +134,150 @@
      "data": {
       "text/plain": [
        "[{'symbol': 'ETHUSDT',\n",
-       "  'order_id': 'a6b07d03-4fb6-4b9a-b9eb-d1d35ea38401',\n",
+       "  'side': 'Sell',\n",
+       "  'qty': 0.1,\n",
+       "  'order_price': 3820.0,\n",
+       "  'order_type': 'Limit',\n",
+       "  'exec_type': 'Trade',\n",
+       "  'closed_size': 0.1,\n",
+       "  'cum_entry_value': 359.53728395,\n",
+       "  'avg_entry_price': 3595.3729,\n",
+       "  'cum_exit_value': 382.0,\n",
+       "  'avg_exit_price': 3820.0,\n",
+       "  'closed_pnl': 22.04153222,\n",
+       "  'fill_count': 1,\n",
+       "  'leverage': 10.0,\n",
+       "  'created_time': 1753104028791,\n",
+       "  'updated_time': 1753105960582},\n",
+       " {'symbol': 'ETHUSDT',\n",
+       "  'side': 'Sell',\n",
+       "  'qty': 0.1,\n",
+       "  'order_price': 3800.0,\n",
+       "  'order_type': 'Limit',\n",
+       "  'exec_type': 'Trade',\n",
+       "  'closed_size': 0.1,\n",
+       "  'cum_entry_value': 354.79660494,\n",
+       "  'avg_entry_price': 3547.9661,\n",
+       "  'cum_exit_value': 380.0,\n",
+       "  'avg_exit_price': 3800.0,\n",
+       "  'closed_pnl': 24.71534028,\n",
+       "  'fill_count': 1,\n",
+       "  'leverage': 10.0,\n",
+       "  'created_time': 1753089392087,\n",
+       "  'updated_time': 1753094681931},\n",
+       " {'symbol': 'ETHUSDT',\n",
+       "  'side': 'Sell',\n",
+       "  'qty': 0.1,\n",
+       "  'order_price': 3765.5,\n",
+       "  'order_type': 'Limit',\n",
+       "  'exec_type': 'Trade',\n",
+       "  'closed_size': 0.1,\n",
+       "  'cum_entry_value': 354.79660494,\n",
+       "  'avg_entry_price': 3547.9661,\n",
+       "  'cum_exit_value': 376.55,\n",
+       "  'avg_exit_price': 3765.5,\n",
+       "  'closed_pnl': 21.30392488,\n",
+       "  'fill_count': 1,\n",
+       "  'leverage': 10.0,\n",
+       "  'created_time': 1753071146481,\n",
+       "  'updated_time': 1753071630338},\n",
+       " {'symbol': 'ETHUSDT',\n",
+       "  'side': 'Sell',\n",
+       "  'qty': 0.1,\n",
+       "  'order_price': 3710.0,\n",
+       "  'order_type': 'Limit',\n",
+       "  'exec_type': 'Trade',\n",
+       "  'closed_size': 0.1,\n",
+       "  'cum_entry_value': 344.94490741,\n",
+       "  'avg_entry_price': 3449.4491,\n",
+       "  'cum_exit_value': 371.0,\n",
+       "  'avg_exit_price': 3710.0,\n",
+       "  'closed_pnl': 25.57024928,\n",
+       "  'fill_count': 1,\n",
+       "  'leverage': 10.0,\n",
+       "  'created_time': 1753009863813,\n",
+       "  'updated_time': 1753010328071},\n",
+       " {'symbol': 'ETHUSDT',\n",
+       "  'side': 'Sell',\n",
+       "  'qty': 0.1,\n",
+       "  'order_price': 3660.0,\n",
+       "  'order_type': 'Limit',\n",
+       "  'exec_type': 'Trade',\n",
+       "  'closed_size': 0.1,\n",
+       "  'cum_entry_value': 344.9449074,\n",
+       "  'avg_entry_price': 3449.4491,\n",
+       "  'cum_exit_value': 366.0,\n",
+       "  'avg_exit_price': 3660.0,\n",
+       "  'closed_pnl': 20.60793149,\n",
+       "  'fill_count': 1,\n",
+       "  'leverage': 10.0,\n",
+       "  'created_time': 1752987962539,\n",
+       "  'updated_time': 1752995265356},\n",
+       " {'symbol': 'ETHUSDT',\n",
+       "  'side': 'Sell',\n",
+       "  'qty': 0.1,\n",
+       "  'order_price': 3620.0,\n",
+       "  'order_type': 'Limit',\n",
+       "  'exec_type': 'Trade',\n",
+       "  'closed_size': 0.1,\n",
+       "  'cum_entry_value': 339.16736111,\n",
+       "  'avg_entry_price': 3391.6737,\n",
+       "  'cum_exit_value': 362.0,\n",
+       "  'avg_exit_price': 3620.0,\n",
+       "  'closed_pnl': 22.41324609,\n",
+       "  'fill_count': 1,\n",
+       "  'leverage': 10.0,\n",
+       "  'created_time': 1752860082306,\n",
+       "  'updated_time': 1752860202019},\n",
+       " {'symbol': 'ETHUSDT',\n",
+       "  'side': 'Sell',\n",
+       "  'qty': 0.1,\n",
+       "  'order_price': 3600.0,\n",
+       "  'order_type': 'Limit',\n",
+       "  'exec_type': 'Trade',\n",
+       "  'closed_size': 0.1,\n",
+       "  'cum_entry_value': 339.16736111,\n",
+       "  'avg_entry_price': 3391.6737,\n",
+       "  'cum_exit_value': 360.0,\n",
+       "  'avg_exit_price': 3600.0,\n",
+       "  'closed_pnl': 20.48538179,\n",
+       "  'fill_count': 1,\n",
+       "  'leverage': 10.0,\n",
+       "  'created_time': 1752811410290,\n",
+       "  'updated_time': 1752813247394},\n",
+       " {'symbol': 'ETHUSDT',\n",
+       "  'side': 'Sell',\n",
+       "  'qty': 0.1,\n",
+       "  'order_price': 3354.0,\n",
+       "  'order_type': 'Limit',\n",
+       "  'exec_type': 'Trade',\n",
+       "  'closed_size': 0.1,\n",
+       "  'cum_entry_value': 335.30083333,\n",
+       "  'avg_entry_price': 3353.0084,\n",
+       "  'cum_exit_value': 335.4,\n",
+       "  'avg_exit_price': 3354.0,\n",
+       "  'closed_pnl': -0.18041894,\n",
+       "  'fill_count': 1,\n",
+       "  'leverage': 10.0,\n",
+       "  'created_time': 1752725863935,\n",
+       "  'updated_time': 1752730177037},\n",
+       " {'symbol': 'ETHUSDT',\n",
+       "  'side': 'Sell',\n",
+       "  'qty': 0.5,\n",
+       "  'order_price': 3365.0,\n",
+       "  'order_type': 'Limit',\n",
+       "  'exec_type': 'Trade',\n",
+       "  'closed_size': 0.5,\n",
+       "  'cum_entry_value': 1678.065,\n",
+       "  'avg_entry_price': 3356.13,\n",
+       "  'cum_exit_value': 1682.5,\n",
+       "  'avg_exit_price': 3365.0,\n",
+       "  'closed_pnl': 3.17556425,\n",
+       "  'fill_count': 1,\n",
+       "  'leverage': 10.0,\n",
+       "  'created_time': 1752691057892,\n",
+       "  'updated_time': 1752693913958},\n",
+       " {'symbol': 'ETHUSDT',\n",
        "  'side': 'Sell',\n",
        "  'qty': 1.0,\n",
        "  'order_price': 3249.0,\n",
@@ -159,7 +294,6 @@
        "  'created_time': 1752681105726,\n",
        "  'updated_time': 1752682506492},\n",
        " {'symbol': 'ETHUSDT',\n",
-       "  'order_id': 'b4701984-87f2-438c-b8ae-9db8559fdea2',\n",
        "  'side': 'Sell',\n",
        "  'qty': 8.0,\n",
        "  'order_price': 3172.96,\n",
@@ -177,7 +311,7 @@
        "  'updated_time': 1752680994188}]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,22 +323,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "e85949b3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'bybit' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Test market order\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m price \u001b[38;5;241m=\u001b[39m \u001b[43mbybit\u001b[49m\u001b[38;5;241m.\u001b[39mget_ask(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mETHUSDT\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'bybit' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test market order\n",
     "price = bybit.get_ask(\"ETHUSDT\")"
