--- a/examples/trading.ipynb
+++ b/examples/trading.ipynb
@@ -13,12 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
+   "id": "a9d9c512",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "import asyncio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "f7856b05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dspy.api.bybit import ByBitManager\n",
+    "from dspy.api.bybit import ByBitManager, BybitWebSocketStream\n",
     "from dspy.api.bybit.config import config"
    ]
   },
@@ -333,12 +344,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2886b038",
+   "metadata": {},
+   "source": [
+    "### <font color=\"grey\">WebSocket</font>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bf0abda6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "max_rows = 10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4753fb88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orderbook_updates = deque(maxlen=max_rows)\n",
+    "trades = deque(maxlen=max_rows)\n",
+    "ticker = deque(maxlen=max_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "42e22e1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stream = BybitWebSocketStream()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "786de9d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def example_orderbook_handler(data):\n",
+    "    \"\"\"Example handler for order book updates.\"\"\"\n",
+    "    print(f\"Order book update for {data['symbol']}:\")\n",
+    "    print(f\"  Best bid: {data['bids'][0][0] if data['bids'] else 'N/A'}\")\n",
+    "    print(f\"  Best ask: {data['asks'][0][0] if data['asks'] else 'N/A'}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ba0a0d5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stream.subscribe_orderbook(\"BTCUSDT\", depth=25, callback=example_orderbook_handler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f77a859",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/m0/lt8lthdj53v7lryp_p277_wh0000gp/T/ipykernel_95765/1230223255.py:7: RuntimeWarning: coroutine 'sleep' was never awaited\n",
+      "  asyncio.sleep(1)\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n",
+      "Couldn't subscribe to topic.Error: error:handler not found,topic:orderbook.25.BTCUSDT.\n",
+      "Exception in thread Thread-18:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/u1774790/.local/share/uv/python/cpython-3.13.2-macos-aarch64-none/lib/python3.13/threading.py\", line 1041, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "    ~~~~~~~~^^\n",
+      "  File \"/Users/u1774790/.local/share/uv/python/cpython-3.13.2-macos-aarch64-none/lib/python3.13/threading.py\", line 1342, in run\n",
+      "    self.function(*self.args, **self.kwargs)\n",
+      "    ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/u1774790/Tripudium/DS/dspy/.venv/lib/python3.13/site-packages/pybit/_websocket_stream.py\", line 262, in _send_custom_ping\n",
+      "    self.ws.send(self.custom_ping_message)\n",
+      "    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/u1774790/Tripudium/DS/dspy/.venv/lib/python3.13/site-packages/websocket/_app.py\", line 291, in send\n",
+      "    raise WebSocketConnectionClosedException(\"Connection is already closed.\")\n",
+      "websocket._exceptions.WebSocketConnectionClosedException: Connection is already closed.\n",
+      "Exception ignored in: <coroutine object sleep at 0x10cdd6140>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/u1774790/.local/share/uv/python/cpython-3.13.2-macos-aarch64-none/lib/python3.13/warnings.py\", line 685, in _warn_unawaited_coroutine\n",
+      "    msg = \"\".join(msg_lines).rstrip(\"\\n\")\n",
+      "KeyboardInterrupt: \n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    # Start streaming\n",
+    "    stream.start()\n",
+    "    \n",
+    "    # Keep the connection alive\n",
+    "    while True:\n",
+    "        asyncio.sleep(1)\n",
+    "        \n",
+    "except KeyboardInterrupt:\n",
+    "    print(\"\\nStopping stream...\")\n",
+    "    stream.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "530d6207",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -357,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
